- Erste Version der "Vorgehensweise" fertig. - Kapitel "Datenstrukturen" und "Grundsätzliche Überlegungen" sind noch zu schreiben

--- a/planning/Vorgehensweise/structure.tex
+++ b/planning/Vorgehensweise/structure.tex
@@ -23,7 +23,7 @@
 \usepackage[
 nochapters, % Turn off chapters since this is an article        
 beramono, % Use the Bera Mono font for monospaced text (\texttt)
-eulermath,% Use the Euler font for mathematics
+%eulermath,% Use the Euler font for mathematics
 eulerchapternumbers,
 pdfspacing, % Makes use of pdftex’ letter spacing capabilities via the microtype package
 dottedtoc % Dotted lines leading to the page numbers in the table of contents
@@ -49,6 +49,8 @@ dottedtoc % Dotted lines leading to the page numbers in the table of contents
 \usepackage{url}
 
 \usepackage{hyperref}
+
+\usepackage{gensymb}	%for the \degree command
 
 \usepackage[ngerman, english]{babel}
 
